modules/gdscript/tests/scripts/analyzer/errors/prints_base_type_not_found.gd
class InnerClass:
	pass

func test():
	var x : InnerClass.DoesNotExist
	print("FAIL")
